# pydo-cli

./: .gitignore  CLI_COMMAND_DESIGN.md  README.md  pyproject.toml
src/pydo/: __init__.py  art.py  gtasks.py  gtasks_integration.py  handlers.py  main.py  models.py  pydo_list.py  views.py
