# This file defines project metadata, dependencies, and build configuration.
# It's the modern standard, replacing setup.py, setup.cfg, and requirements.txt.

[build-system]
# Specifies the tools needed to build your package.
# setuptools is a standard and safe choice.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Core project metadata (PEP 621).
name = "pydo"
version = "0.1.0"
authors = [
  { name="Aleksa Vidovic", email="you@example.com" },
]
description = "A sample Python command-line tool."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Project dependencies go here.
# These are the packages your tool needs to run.
dependencies = [
  "rich",
  "ruff (>=0.13.0,<0.14.0)",
]

[project.urls]
"Homepage" = "https://github.com/your-username/my-cli-tool"
"Bug Tracker" = "https://github.com/your-username/my-cli-tool/issues"


# This section is the magic for creating the command-line tool.
# It tells pip to create an executable script.
[project.scripts]
# "command-name" = "path.to.python.module:function_to_run"
pydo = "pydo.main:run"


# Optional: Configure development tools like linters and formatters.
# This example uses ruff, a fast and popular choice.
[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I"] # E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings, I=isort
lint.ignore = ["E501"] # Ignore "line too long" as it's handled by the formatter.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
